trello + starting match score board

--- a/rochambeau.html
+++ b/rochambeau.html
@@ -36,7 +36,19 @@
                     <td id="wins">0</td>
                     <td id="losses">0</td>
                     <td id="ties">0</td>
-                </tr>
+
+                      <div id="result"></div>
+            <div id="scoreboard">
+              <table class="table">
+                <tr>
+                    <td> My Matches Won: </td>
+                    <td> Computer Mathes Won: </td>
+                     </tr>
+                  <tr>
+                  <td id = "myMatches">0 </td>
+                      <td id = "computerMatches">0 </td>
+
+                  </tr>
               </table>
             </div>
         </div>
