working on matches

--- a/rochambeau.html
+++ b/rochambeau.html
@@ -45,8 +45,8 @@
                     <td> Computer Mathes Won: </td>
                      </tr>
                   <tr>
-                  <td id = "myMatches">0 </td>
-                      <td id = "computerMatches">0 </td>
+                  <td id = "myMatcheswon">0 </td>
+                      <td id = "computerMatcheswon">0 </td>
 
                   </tr>
               </table>
