--- a/rochambeau.html
+++ b/rochambeau.html
@@ -2,31 +2,31 @@
 <html lang="en">
 
     <head>
-        <title>Rochambeau</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    </head>
+    <title>Rochambeau</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 
-    <body>
-        <div class="container">
-            <h1>Rock, Paper, Scissors Game</h1>
-            <p>Let's Play Rock, Paper Scissors! Press your choice and then press PLAY!</p>
-            <p>
-                <button type="button" class="btn btn-default" id="rock">Rock</button>
-                <button type="button" class="btn btn-default" id="paper">Paper</button>
-                <button type="button" class="btn btn-default" id="scissors">Scissors</button>
-                <button type="button" class="btn btn-default" id="lizard">Lizard</button>
-                <button type="button" class="btn btn-default" id="spock">Spock</button>
-            </p>
-            <p></p>
-            <input type="button" value="Play" class="btn btn-primary" id="play">
-            <p></p>
-            <div id="result"></div>
-            <div id="scoreboard">
-              <table class="table">
+<body>
+    <div class="container">
+        <h1>Rock, Paper, Scissors Game</h1>
+        <p>Let's Play Rock, Paper Scissors! Press your choice and then press PLAY!</p>
+        <p>
+            <button type="button" class="btn btn-default" id="rock">Rock</button>
+            <button type="button" class="btn btn-default" id="paper">Paper</button>
+            <button type="button" class="btn btn-default" id="scissors">Scissors</button>
+            <button type="button" class="btn btn-default" id="lizard">Lizard</button>
+            <button type="button" class="btn btn-default" id="spock">Spock</button>
+        </p>
+        <p></p>
+        <input type="button" value="Play" class="btn btn-primary" id="play">
+        <p></p>
+        <div id="result"></div>
+        <div id="scoreboard">
+            <table class="table">
                 <tr>
                     <td>Wins:</td>
                     <td>Losses:</td>
@@ -37,21 +37,21 @@
                     <td id="losses">0</td>
                     <td id="ties">0</td>
 
-                      <div id="result"></div>
-            <div id="scoreboard">
-              <table class="table">
-                <tr>
-                    <td> My Matches Won: </td>
-                    <td> Computer Mathes Won: </td>
-                     </tr>
-                  <tr>
-                  <td id = "myMatcheswon">0 </td>
-                      <td id = "computerMatcheswon">0 </td>
+                    <div id="result"></div>
+                    <div id="scoreboard">
+                        <table class="table">
+                            <tr>
+                                <td> Matches Wins: </td>
+                                <td> Mathes Losses: </td>
+                            </tr>
+                            <tr>
+                                <td id="matchwins">0 </td>
+                                <td id="matchlosses">0 </td>
 
-                  </tr>
-              </table>
-            </div>
+                            </tr>
+                        </table>
+                    </div>
         </div>
-    </body>
-    <script src="rochambeau.js"></script>
+</body>
+<script src="rochambeau.js"></script>
 </html>
