--- a/rochambeau.html
+++ b/rochambeau.html
@@ -41,8 +41,8 @@
                     <div id="scoreboard">
                         <table class="table">
                             <tr>
-                                <td> Matches Wins: </td>
-                                <td> Mathes Losses: </td>
+                                <td> Matches Won: </td>
+                                <td> Mathes Lost: </td>
                             </tr>
                             <tr>
                                 <td id="matchwins">0 </td>
