--- a/rochambeau.html
+++ b/rochambeau.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
+<head>
     <title>Rochambeau</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +12,8 @@
 
 <body>
     <div class="container">
-        <h1>Rock, Paper, Scissors Game</h1>
-        <p>Let's Play Rock, Paper Scissors! Press your choice and then press PLAY!</p>
+        <h1>Rock, Paper, Scissors, Lizard, Spock Game</h1>
+        <p>Let's Play Rock, Paper Scissors, Lizard, Spock! Press your choice and then press PLAY!</p>
         <p>
             <button type="button" class="btn btn-default" id="rock">Rock</button>
             <button type="button" class="btn btn-default" id="paper">Paper</button>
@@ -26,32 +26,43 @@
         <p></p>
         <div id="result"></div>
         <div id="scoreboard">
-            <table class="table">
-                <tr>
-                    <td>Wins:</td>
-                    <td>Losses:</td>
-                    <td>Ties:</td>
-                </tr>
-                <tr>
-                    <td id="wins">0</td>
-                    <td id="losses">0</td>
-                    <td id="ties">0</td>
-
-                    <div id="result"></div>
-                    <div id="scoreboard">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-5">
                         <table class="table">
                             <tr>
-                                <td> Matches Won: </td>
-                                <td> Mathes Lost: </td>
+                                <td>Wins:</td>
+                                <td>Losses:</td>
+                                <td>Ties:</td>
                             </tr>
                             <tr>
-                                <td id="matchwins">0 </td>
-                                <td id="matchlosses">0 </td>
-
+                                <td id="wins">0</td>
+                                <td id="losses">0</td>
+                                <td id="ties">0</td>
                             </tr>
                         </table>
                     </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <table class="table">
+                            <tr>
+                                <td>Matches Won:</td>
+                                <td>Matches Lost:</td>
+                            </tr>
+                            <tr>
+                                <td id="matchWins">0</td>
+                                <td id="matchLosses">0</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
 </body>
 <script src="rochambeau.js"></script>
+
 </html>
